<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_media_player"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_media_player" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_recorder"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/menu_recorder" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_stories" />
        <item
            android:id="@+id/nav_database"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_database" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_maps" />
    </group>
</menu>