<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.danilov.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calculator"
        android:name="ru.mirea.danilov.mireaproject.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.danilov.mireaproject.ui.browser.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/nav_media_player"
        android:name="ru.mirea.danilov.mireaproject.ui.mediaplayer.MediaPlayerFragment"
        android:label="@string/menu_media_player"
        tools:layout="@layout/fragment_media_player" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.danilov.mireaproject.ui.camera.CameraFragment"
        android:label="fragment_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_recorder"
        android:name="ru.mirea.danilov.mireaproject.ui.recorder.RecorderFragment"
        android:label="fragment_recorder"
        tools:layout="@layout/fragment_recorder" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.mirea.danilov.mireaproject.ui.settings.SettingsFragment"
        android:label="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_stories"
        android:name="ru.mirea.danilov.mireaproject.ui.stories.StoriesFragment"
        android:label="fragment_stories"
        tools:layout="@layout/fragment_stories" />
</navigation>